# clauditor

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  action.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: checks.md
examples/clean/: CLAUDE.md
examples/messy/: CLAUDE.local.md  CLAUDE.md  extra-rules.md
src/clauditor/: __init__.py  analysis.py  cli.py  config.py  loader.py  model.py  parser.py  registry.py  report.py  selftest.py  textutil.py
src/clauditor/checks/: __init__.py  bloat.py  contradiction.py  duplicate.py  filler.py  imports.py  override.py  vague.py
tests/: test_clauditor.py
