[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "clauditor"
version = "0.2.0"
description = "Audit your Claude Code instruction stack — find the rules Claude silently ignores."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Ingrid Toulotte" }]
keywords = ["claude", "claude-code", "claude.md", "linter", "ai", "agents", "llm", "context"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ingridtoulotte/clauditor"
Repository = "https://github.com/ingridtoulotte/clauditor"
Issues = "https://github.com/ingridtoulotte/clauditor/issues"

[project.scripts]
clauditor = "clauditor.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
